fix: :lipstick: fix for p, b and h3 elements in dark mode

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -22,37 +22,40 @@ $navbar-dark-active-color:          $link-color-dark;
 
 /** Theme styles */
 
-[data-dark-mode] body {
-  background: $body-bg-dark;
-  color: $body-color-dark;
-}
+[data-dark-mode] {
+  body {
+    background: $body-bg-dark;
+    color: $body-color-dark;
 
-[data-dark-mode] body a {
-  color: $link-color-dark;
-}
+    a {
+      color: $link-color-dark;
+      &.text-body {
+        color: $body-color-dark !important;
+      }
+    }
 
-[data-dark-mode] body a.text-body {
-  color: $body-color-dark !important;
-}
+    // Fix for text and h3 from Newsletter
+    p, h3 {
+      color: $body-color-dark;
+    }
 
-[data-dark-mode] body .btn-primary {
-  @include button-variant($button-color-dark, $button-color-dark);
+    .btn-primary {
+      @include button-variant($button-color-dark, $button-color-dark);
+      color: $body-bg-dark !important;
+    }
 
-  color: $body-bg-dark !important;
-}
+    .btn-outline-primary {
+      @include button-outline-variant($button-color-dark, $button-color-dark);
+      color: $link-color-dark;
+      &:hover {
+        color: $body-bg-dark;
+      }
+    }
 
-[data-dark-mode] body .btn-outline-primary {
-  @include button-outline-variant($button-color-dark, $button-color-dark);
-
-  color: $link-color-dark;
-}
-
-[data-dark-mode] body .btn-outline-primary:hover {
-  color: $body-bg-dark;
-}
-
-[data-dark-mode] body .btn-doks-light {
-  color: $navbar-dark-color;
+    .btn-doks-light {
+      color: $navbar-dark-color;
+    }
+  }
 }
 
 [data-dark-mode] body .show > .btn-doks-light,
